Starting npc body"

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -179,7 +179,7 @@ input:checked + .sheet-slider:before {
 .sheet-tab-switch[value="language"] ~ .sheet-skills-lang, .sheet-magic-toggle[value="spells"] ~ .sheet-magic-spells, .sheet-magic-toggle[value="preps"] ~ .sheet-magic-preps, .sheet-magic-toggle[value="rituals"] ~ .sheet-magic-rituals, .sheet-tab-switch[value="quality"] ~ .sheet-quality, .sheet-tab-switch[value="martial"] ~ .sheet-martial, .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc {
   display: inline; }
 
-input[name='attr_sheet_type'][value="grunt"] ~ .sheet-npc .sheet-grunt, input[name='attr_sheet_type'][value="host"] ~ .sheet-npc .sheet-host, input[name='attr_sheet_type'][value="sprite"] ~ .sheet-npc .sheet-sprite, input[name='attr_sheet_type'][value="vehicle"] ~ .sheet-npc .sheet-vehicle, .sheet-pc .sheet-tabs, div.sheet-skill-box div.sheet-row-long, .sheet-npc .sheet-tabs {
+input[name='attr_sheet_type'][value="grunt"] ~ .sheet-npc .sheet-attribute.sheet-grunt, input[name='attr_sheet_type'][value="host"] ~ .sheet-npc .sheet-attribute.sheet-host, input[name='attr_sheet_type'][value="sprite"] ~ .sheet-npc .sheet-attribute.sheet-sprite, input[name='attr_sheet_type'][value="vehicle"] ~ .sheet-npc .sheet-attribute.sheet-vehicle, .sheet-pc .sheet-tabs, div.sheet-skill-box div.sheet-row-long, .sheet-npc .sheet-tabs, .sheet-npc .sheet-body, .sheet-npc .sheet-body .sheet-column {
   display: inline-grid;
   grid-column-gap: 1%;
   grid-row-gap: 1%; }
@@ -192,13 +192,13 @@ input[name='attr_sheet_type'][value="grunt"] ~ .sheet-npc .sheet-grunt, input[na
   font-family: "Pictos"; }
 
 input[name='attr_sheet_type']:not([value="pc"]) ~ .sheet-npc,
-input[name='attr_sheet_type'][value="pc"] ~ .sheet-pc, .sheet-options_toggle[value="arms"] ~ .sheet-arms, .sheet-options_toggle[value="augs"] ~ .sheet-augs, .sheet-options_toggle[value="core"] ~ .sheet-core, .sheet-options_toggle[value="gear"] ~ .sheet-gear, .sheet-options_toggle[value="options"] ~ .sheet-options, .sheet-options_toggle[value="social"] ~ .sheet-social, .sheet-options_toggle[value="magic"] ~ .sheet-magic, .sheet-options_toggle[value="matrix"] ~ .sheet-matrix, .sheet-options_toggle[value="vehicle"] ~ .sheet-vehicle, .sheet-character-type[value="magic"] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-magic, .sheet-character-type[value="resonance"] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-resonance, .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc-lifestyle, .sheet-arms .sheet-display, .sheet-optional-flag:not([value="0"]) + .sheet-optional,
+input[name='attr_sheet_type'][value="pc"] ~ .sheet-pc, .sheet-options_toggle[value="arms"] ~ .sheet-arms, .sheet-options_toggle[value="augs"] ~ .sheet-augs, .sheet-options_toggle[value="core"] ~ .sheet-core, .sheet-options_toggle[value="gear"] ~ .sheet-gear, .sheet-options_toggle[value="options"] ~ .sheet-options, .sheet-options_toggle[value="social"] ~ .sheet-social, .sheet-options_toggle[value="magic"] ~ .sheet-magic, .sheet-options_toggle[value="matrix"] ~ .sheet-matrix, .sheet-options_toggle[value="vehicle"] ~ .sheet-vehicle, .sheet-character-type[value="magic"] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-magic, .sheet-character-type[value="resonance"] ~ .sheet-pc .sheet-pc-row .sheet-attr-col .sheet-hide-resonance, input[name='attr_sheet_type'][value="grunt"] ~ .sheet-npc .sheet-row.sheet-grunt, input[name='attr_sheet_type'][value="host"] ~ .sheet-npc .sheet-row.sheet-host, input[name='attr_sheet_type'][value="sprite"] ~ .sheet-npc .sheet-row.sheet-sprite, input[name='attr_sheet_type'][value="vehicle"] ~ .sheet-npc .sheet-row.sheet-vehicle, .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc-lifestyle, .sheet-arms .sheet-display, .sheet-optional-flag:not([value="0"]) + .sheet-optional,
 .sheet-static {
   display: inline-block; }
 
 input[name='attr_stats_toggle'][value="settings"] ~ .sheet-attribute .sheet-settings,
 input[name='attr_stats_toggle'][value="settings"] ~ .sheet-body .sheet-settings {
-  display: block; }
+  display: inline-block; }
 
 .sheet-pc .sheet-tabs input[value*="arms"] ~ button[name*="arms"], .sheet-pc .sheet-tabs input[value*="augs"] ~ button[name*="augs"], .sheet-pc .sheet-tabs input[value*="core"] ~ button[name*="core"], .sheet-pc .sheet-tabs input[value*="gear"] ~ button[name*="gear"], .sheet-pc .sheet-tabs input[value*="options"] ~ button[name*="options"], .sheet-pc .sheet-tabs input[value*="social"] ~ button[name*="social"], .sheet-pc .sheet-tabs input[value*="magic"] ~ button[name*="magic"], .sheet-pc .sheet-tabs input[value*="matrix"] ~ button[name*="matrix"], .sheet-pc .sheet-tabs input[value*="vehicle"] ~ button[name*="vehicle"] {
   background-color: #610b0d;
@@ -1704,7 +1704,8 @@ input.sheet-skill-select {
   min-height: 800px;
   padding: 10px 10px;
   width: 720px;
-  /*:+:+:+: NPC ATTRIBUTES :+:+:+:*/ }
+  /*:+:+:+: NPC ATTRIBUTES :+:+:+:*/
+  /*:+:+:+: NPC BODY :+:+:+:*/ }
   .sheet-npc button {
     font-weight: bold; }
     .sheet-npc button[type="roll"] {
@@ -1723,6 +1724,9 @@ input.sheet-skill-select {
     font-size: 1.25em; }
   .sheet-npc h2 {
     font-size: 1em;
+    text-transform: capitalize; }
+  .sheet-npc h3 {
+    font-size: 0.8em;
     font-variant: small-caps;
     text-align: center;
     text-decoration: underline; }
@@ -1787,7 +1791,7 @@ input.sheet-skill-select {
   .sheet-npc .sheet-attribute {
     border-bottom: 1px solid #fff;
     border-top: 1px solid #fff;
-    margin: 2% 0px;
+    margin: 2% 0px 1% 0px;
     padding: 1%;
     width: 100%; }
     .sheet-npc .sheet-attribute input[type="number"] {
@@ -1814,8 +1818,26 @@ input.sheet-skill-select {
       grid-row: 3; }
     .sheet-npc .sheet-attribute label[data-i18n-title='modifier'] {
       grid-row: 4; }
+  .sheet-npc .sheet-body {
+    grid-template-columns: 50% 27% 1fr;
+    width: 100%; }
+    .sheet-npc .sheet-body .sheet-column {
+      width: 100%; }
+    .sheet-npc .sheet-body .sheet-row {
+      width: 100%; }
+      .sheet-npc .sheet-body .sheet-row button {
+        font-size: 1.2em;
+        margin-right: 3%;
+        text-align: left; }
+      .sheet-npc .sheet-body .sheet-row h2 {
+        display: inline;
+        font-size: 1.1em;
+        line-height: unset;
+        margin-right: 3%;
+        font-weight: normal; }
+      .sheet-npc .sheet-body .sheet-row span.sheet-tiny-span {
+        margin: 0px 1%; }
 
-/*:+:+:+: NPC STATS :+:+:+:*/
 /*:+:+:+: NPC TOGGLES & GEAR ICONS :+:+:+:*/
 input.sheet-settings-toggle {
   width: 3em; }
