--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -189,10 +189,33 @@ include src/pug/_mixins.pug
 				input(name='attr_'+val[0] placeholder='3' title='@{'+val[0]+'}' type='number' value='')
 	.sprite.attribute
 		+hostSprite(spriteObject, 'level')
-	.grunt.body
-		.row
-			label(data-i18n-title='pr' title='Professional Rating')
-				input(name='attr_pr' title='@{pr}' type='number')
+	.body
+		.column
+			h1.settings(data-i18n='bonuses') Bonuses
+			.row
+				h2(data-i18n='pr') Professional Rating
+				span(name='attr_pr')
+				label.settings(data-i18n-title='pr' title='Professional Rating')
+					input(name='attr_pr' title='@{pr}' type='number')
+			each val, key in {'Initiative': ['initiative', 'initiative'], 'Astral Initiative': ['astral', 'astralinitiative'], 'Matrix Initiative': ['matrix', 'matrixinitiative']}
+				- const npcCharacterType = key === 'Initiative' ? 'grunt' : key === 'Astral Initiative' ? 'grunt magic' : 'grunt sprite';
+				.row(class=npcCharacterType)
+					+initiativeRoll(key, val[0], val[1])
+					label.settings(data-i18n-title='modifier' title='modifier')
+						input(name='attr_'+val[0]+'_modifier' placeholder='0' title='@{'+val[0]+'_modifier}' type='number' value='0')
+					span.settings +
+					label.settings(data-i18n-title='modifierdice' title='Modifier Dice')
+						input(min='0' max='4' name='attr_'+val[0]+'_dice_modifier' placeholder='0' title='@{'+val[0]+'_dice_modifier}' type='number' value='0')
+					span.settings(data-i18n='d6') d6
+					span.settings.tiny-span() =
+					span(name='attr_display_'+val[0]+'_mod')
+					span.tiny-span() +
+					span(name='attr_'+val[0]+'_dice')
+					span.tiny-span(data-i18n='d6') d6
+			.row
+			
+		.column
+		.column
 
 //- FOOTER
 include src/footer.html
