--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -185,12 +185,18 @@
 	@each $npcType in 'grunt', 'host', 'sprite', 'vehicle' {
 		.sheet-#{$npcType}  { @extend %display-none; }
 
-		input[name='attr_sheet_type'][value="#{$npcType}"] ~ .sheet-npc .sheet-#{$npcType} { @extend %display-inline-grid; }
+		input[name='attr_sheet_type'][value="#{$npcType}"] ~ .sheet-npc .sheet-attribute.sheet-#{$npcType} { 
+			@extend %display-inline-grid; 
+		}
+
+		input[name='attr_sheet_type'][value="#{$npcType}"] ~ .sheet-npc .sheet-row.sheet-#{$npcType} { 
+			@extend %display-inline-block; 
+		}
 	}
 
 	input[name='attr_stats_toggle'][value="settings"] ~ .sheet-attribute .sheet-settings,
 	input[name='attr_stats_toggle'][value="settings"] ~ .sheet-body .sheet-settings {
-		display: block;
+		display: inline-block;
 	}
 
 	%highlight-button {
@@ -1902,11 +1908,15 @@
 
 	h2 { 
 		font-size: 1em;
+		text-transform: capitalize;
+	}
+
+	h3 { 
+		font-size: 0.8em;
 		font-variant: small-caps;
 		text-align  : center;
 		text-decoration: underline; 
 	}
-
 
 	textarea, select, .sheet-matrix input {
 		color           : #fff;
@@ -1953,11 +1963,11 @@
 	.sheet-attribute {
 		border-bottom: 1px solid #fff;
 		border-top   : 1px solid #fff;
-		margin       : 2% 0px;
+		margin       : 2% 0px 1% 0px;
 		padding: 1%;
 		width        : 100%;
 
-		input[type="number"] {text-align   : center;}
+		input[type="number"] {text-align: center;}
 
 		label {
 			text-align: center;
@@ -1986,8 +1996,41 @@
 		span +  label {grid-row: 3;}
 		label[data-i18n-title='modifier']{grid-row: 4;}
 	}
+
+	/*:+:+:+: NPC BODY :+:+:+:*/
+	.sheet-body {
+		@extend %display-inline-grid;
+		grid-template-columns: 50% 27% 1fr;
+		width: 100%;
+
+		.sheet-column {
+			@extend %display-inline-grid;
+			width: 100%;
+		}
+
+		.sheet-row {
+			width: 100%;
+
+			button {
+				font-size: 1.2em;
+				margin-right: 3%;
+				text-align: left;
+			}
+
+			h2 { 
+				display: inline;
+				font-size: 1.1em;
+				line-height: unset;
+				margin-right: 3%; 
+				font-weight: normal;
+			}
+
+			span.sheet-tiny-span {
+				margin: 0px 1%;
+			}
+		}
+	}
 }
-	/*:+:+:+: NPC STATS :+:+:+:*/
 
 
 	/*:+:+:+: NPC TOGGLES & GEAR ICONS :+:+:+:*/
