--- a/Shadowrun5thEdition/src/pug/_mixins.pug
+++ b/Shadowrun5thEdition/src/pug/_mixins.pug
@@ -5,8 +5,8 @@
 - const spriteObject = {'Level': ['level', '5'], 'Attack': ['attack', '5'], 'Sleaze': ['sleaze', '6'], 'Data Processing': ['data_processing', '7'], 'Firewall': ['firewall', '8']};
 
 //- DIE ROLL VARIABLES
-- const rollBeginging = '@{gm_toggle} &{template:rolls}'
-- const rollEnding = '+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}'
+- const rollBeginging = '@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{wound=[[@{wounds_toggle}]]}}{{edge=[[@{edge_toggle}]]}}'
+- const rollEnding = '+@{wounds_toggle}+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}'
 
 //- ROLL BUTTOn
 mixin rollButton(header, base, rollFormula)
@@ -53,3 +53,7 @@ mixin hostSprite(object, attrName)
         span(name='attr_'+val[0])
         label.settings(data-i18n-title=val[0] title=key)
             input(name='attr_'+val[0] placeholder=val[1] title='@{'+val[0]+'}' type='number' value='')
+            
+//- INITITAITVE ROLL
+mixin initiativeRoll(name, attribute, translation)
+    button(data-i18n=translation name=name type='roll' value!=rollBeginging+'{{header=^{'+translation+'}}}{{base=^{base}}}{{dice=[[((@{'+attribute+'_mod})+@{wound_toggle}+@{modifier_toggle})+(@{'+attribute+'_dice})d6cf0 &{tracker}]]}}') #{name}
