Basic D&D Moldvay: make tab larger, minor documentation fixes.

--- a/DnD_Moldvay_AmandatheAmazon/D&D_Moldvay_AmandatheAmazon.css
+++ b/DnD_Moldvay_AmandatheAmazon/D&D_Moldvay_AmandatheAmazon.css
@@ -1,5 +1,5 @@
 /* Basic D&D: Moldvay Character Sheet CSS */
-/* Version 1.18 */
+/* Version 2.71 */
 
 /*importing fonts
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');*/
@@ -1054,6 +1054,7 @@ input.sheet-maintab
     height: 22px;
     cursor: pointer;    
     position: relative;
+    left: 5px;
     opacity: 0;
     z-index: 9999;
 }
@@ -1064,8 +1065,7 @@ span.sheet-monster {
     text-align: center;
     display: inline-block;    
     width: 20%;
-    height: 16px;
-    /*font-size: 9px;*/
+    height: 23px;
     font-size: 14px;
     
     background: #65763c;
@@ -1100,8 +1100,7 @@ input.sheet-maintab::before
     background: linear-gradient(to top, #c8c8c8, #fff, #c8c8c8);
     
     width: 50px;
-    height: 20px;
-    /*font-size: 18px;*/
+    height: 25px;
     font-size: 24px;
 }
 
