--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -146,17 +146,11 @@ input:checked + .sheet-slider:before {
   -ms-transform: translateX(26px);
   transform: translateX(26px); }
 
-.sheet-pc-col input[type="checkbox"], .sheet-pc-col input[type="radio"],
-.sheet-pc-col input[type="checkbox"] + span,
-.sheet-pc-col input[type="radio"] + span, .sheet-npc input[type="checkbox"], .sheet-npc input[type="radio"],
-.sheet-npc input[type="checkbox"] + span,
-.sheet-npc input[type="radio"] + span {
+.sheet-pc-col input[type="checkbox"], .sheet-pc-col input[type="radio"], .sheet-pc-col input[type="checkbox"] + span, .sheet-pc-col input[type="radio"] + span, .sheet-npc input[type="checkbox"], .sheet-npc input[type="radio"], .sheet-npc input[type="checkbox"] + span, .sheet-npc input[type="radio"] + span {
   position: relative; }
-
 .sheet-pc-col input[type="checkbox"], .sheet-pc-col input[type="radio"], .sheet-npc input[type="checkbox"], .sheet-npc input[type="radio"] {
   opacity: 0;
   z-index: 2; }
-
 .sheet-pc-col input[type="number"], .sheet-npc input[type="number"] {
   border: 1px solid #b8b7b6; }
 
@@ -216,12 +210,11 @@ input[name='attr_stats_toggle'][value="settings"] ~ .sheet-body .sheet-settings 
   font-weight: bolder;
   text-transform: capitalize;
   padding: 5px; }
-  .sheet-tabs button[type="action"].sheet-pictos, .sheet-tabs .sheet-cc-row button[type="action"][name*="shots"], .sheet-cc-row .sheet-tabs button[type="action"][name*="shots"], .sheet-tabs .sheet-cc-row button[type="action"][name="act_reload"], .sheet-cc-row .sheet-tabs button[type="action"][name="act_reload"], .sheet-tabs .sheet-cc-row button[type="action"][name="act_primary_ammo"], .sheet-cc-row .sheet-tabs button[type="action"][name="act_primary_ammo"], .sheet-tabs button[type="action"].sheet-armor-buttons, .sheet-tabs
-  button[type="action"].sheet-roll-toggles, .sheet-tabs .repcontrol button[type="action"].repcontrol_edit:after, .repcontrol .sheet-tabs button[type="action"].repcontrol_edit:after, .sheet-tabs
-  .repcontrol button[type="action"].repcontrol_add:after,
+  .sheet-tabs button[type="action"].sheet-pictos, .sheet-tabs .sheet-cc-row button[type="action"][name*="shots"], .sheet-cc-row .sheet-tabs button[type="action"][name*="shots"], .sheet-tabs .sheet-cc-row button[type="action"][name="act_reload"], .sheet-cc-row .sheet-tabs button[type="action"][name="act_reload"], .sheet-tabs .sheet-cc-row button[type="action"][name="act_primary_ammo"], .sheet-cc-row .sheet-tabs button[type="action"][name="act_primary_ammo"], .sheet-tabs button[type="action"].sheet-armor-buttons,
+  .sheet-tabs button[type="action"].sheet-roll-toggles, .sheet-tabs .repcontrol button[type="action"].repcontrol_edit:after, .repcontrol .sheet-tabs button[type="action"].repcontrol_edit:after,
+  .sheet-tabs .repcontrol button[type="action"].repcontrol_add:after,
   .repcontrol .sheet-tabs button[type="action"].repcontrol_add:after, .sheet-tabs .itemcontrol button[type="action"].repcontrol_del, .itemcontrol .sheet-tabs button[type="action"].repcontrol_del {
     text-transform: lowercase; }
-
 .sheet-tabs button[type="roll"] {
   color: #fff;
   font-family: "dicefontd6";
@@ -229,7 +222,6 @@ input[name='attr_stats_toggle'][value="settings"] ~ .sheet-body .sheet-settings 
   vertical-align: top; }
   .sheet-tabs button[type="roll"]:hover {
     text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #e31715; }
-
 .sheet-tabs h2 {
   color: #fff;
   font-size: 1em;
@@ -287,8 +279,7 @@ input[name='attr_stats_toggle'][value="settings"] ~ .sheet-body .sheet-settings 
       grid-area: 1 / 1 / 2 / 6;
       height: 100%;
       width: 100%; }
-    .sheet-pc .sheet-tabs label[data-i18n-title='character name'] > input[type="text"],
-    .sheet-pc .sheet-tabs label[data-i18n-title='player name'] > input[type="text"] {
+    .sheet-pc .sheet-tabs label[data-i18n-title='character name'] > input[type="text"], .sheet-pc .sheet-tabs label[data-i18n-title='player name'] > input[type="text"] {
       color: #fff;
       font-weight: bolder;
       background-color: transparent;
@@ -400,8 +391,7 @@ input[name='attr_stats_toggle'][value="settings"] ~ .sheet-body .sheet-settings 
     width: 80px; }
     .sheet-htab input[type="radio"] + h1 {
       color: #9a9a9a; }
-    .sheet-htab input[type="radio"]:hover ~ h1,
-    .sheet-htab input[type="radio"]:checked ~ h1 {
+    .sheet-htab input[type="radio"]:hover ~ h1, .sheet-htab input[type="radio"]:checked ~ h1 {
       color: #fff; }
 
 /***** SWITCH BETWEEN DIFFERENT TABS *****/
@@ -443,13 +433,11 @@ input[name='attr_stats_toggle'][value="settings"] ~ .sheet-body .sheet-settings 
 .sheet-core-combat button[type="roll"] {
   font-size: 0.9em;
   text-align: left; }
-
 .sheet-core-combat h2, .sheet-core-combat h3 {
   margin-right: 0px; }
 
 .sheet-flag-primary + div {
   display: none; }
-
 .sheet-flag-primary[value="primary"] + div {
   display: inline;
   margin-right: -5%; }
@@ -638,7 +626,6 @@ input[name='attr_stats_toggle'][value="settings"] ~ .sheet-body .sheet-settings 
 .sheet-condition-box .sheet-display,
 .sheet-condition-box .sheet-settings {
   margin-top: -10px; }
-
 .sheet-condition-box .sheet-settings {
   /***** CONDITION MONITOR DISPLAY*****/ }
   .sheet-condition-box .sheet-settings input {
@@ -854,8 +841,7 @@ input[name='attr_stats_toggle'][value="settings"] ~ .sheet-body .sheet-settings 
   text-align: center;
   vertical-align: top;
   word-break: break-word; }
-  .sheet-display-row:nth-of-type(1),
-  .sheet-display-row:nth-of-type(1) button {
+  .sheet-display-row:nth-of-type(1), .sheet-display-row:nth-of-type(1) button {
     font-weight: bold;
     text-align: left; }
 
@@ -876,7 +862,6 @@ input[name='attr_stats_toggle'][value="settings"] ~ .sheet-body .sheet-settings 
 div.sheet-skill-box button[type='roll'] {
   font-size: 1em;
   text-align: left; }
-
 div.sheet-skill-box label {
   display: inline-block;
   font-size: 0.8em;
@@ -892,30 +877,23 @@ div.sheet-skill-box label {
     text-align: left;
     border-radius: 0px;
     width: 100%; }
-
 div.sheet-skill-box input[name="attr_skill"] {
   border-bottom: 1px solid #333;
   width: 90%; }
-
 div.sheet-skill-box textarea {
   grid-area: 4 / 1 / 4 / 6; }
-
 div.sheet-skill-box div.sheet-row-long {
   width: 100%;
   grid-template-columns: 1fr 3.5em 5em 5em 1.5em;
   margin-top: 1%; }
   div.sheet-skill-box div.sheet-row-long h3:nth-of-type(1n+2) {
     text-align: center; }
-
 div.sheet-skill-box div.sheet-border-bottom {
   border-bottom: 1px solid #333; }
-
 div.sheet-skill-box select.sheet-attribute-select option:nth-of-type(1n+9) {
   color: #7a2593; }
-
 div.sheet-skill-box select.sheet-attribute-select option:nth-of-type(1n+5) {
   color: #610b0d; }
-
 div.sheet-skill-box select.sheet-limit-select option:nth-of-type(1n+5) {
   color: #610b0d; }
 
@@ -929,9 +907,12 @@ div.sheet-skill-box select.sheet-limit-select option:nth-of-type(1n+5) {
   .sheet-quality-box .sheet-settings div select.sheet-skill-select, .sheet-contacts .sheet-display select.sheet-skill-select,
   .sheet-contacts .sheet-settings div select.sheet-skill-select, .sheet-item-box .sheet-display select.sheet-skill-select,
   .sheet-item-box .sheet-settings div select.sheet-skill-select,
-  .sheet-skills-row .sheet-settings input[type="text"], .sheet-quality-box .sheet-display .sheet-settings input[type="text"],
-  .sheet-quality-box .sheet-settings div .sheet-settings input[type="text"], .sheet-contacts .sheet-display .sheet-settings input[type="text"],
-  .sheet-contacts .sheet-settings div .sheet-settings input[type="text"], .sheet-item-box .sheet-display .sheet-settings input[type="text"],
+  .sheet-skills-row .sheet-settings input[type="text"],
+  .sheet-quality-box .sheet-display .sheet-settings input[type="text"],
+  .sheet-quality-box .sheet-settings div .sheet-settings input[type="text"],
+  .sheet-contacts .sheet-display .sheet-settings input[type="text"],
+  .sheet-contacts .sheet-settings div .sheet-settings input[type="text"],
+  .sheet-item-box .sheet-display .sheet-settings input[type="text"],
   .sheet-item-box .sheet-settings div .sheet-settings input[type="text"] {
     width: 50%; }
   .sheet-skills-row .sheet-settings input[type="text"], .sheet-quality-box .sheet-display .sheet-settings input[type="text"],
@@ -980,7 +961,6 @@ input.sheet-skill-select {
   margin-right: -40px; }
   .sheet-arms .sheet-htab:first-child {
     margin-left: -35px; }
-
 .sheet-arms .sheet-display {
   margin-left: -1%; }
   .sheet-arms .sheet-display .sheet-display-row {
@@ -992,7 +972,6 @@ input.sheet-skill-select {
       margin-right: 1%; }
     .sheet-arms .sheet-display .sheet-display-row:nth-of-type(2) {
       width: 12%; }
-
 .sheet-arms input[type="text"] {
   text-align: center;
   width: 8%; }
@@ -1000,7 +979,6 @@ input.sheet-skill-select {
     text-align: left;
     width: 36%;
     margin-right: 1%; }
-
 .sheet-arms h3 {
   text-align: center;
   width: 8%; }
@@ -1036,10 +1014,8 @@ input.sheet-skill-select {
   margin-right: 10px; }
   .sheet-weapon-melee h3:first-child {
     width: 40%; }
-
 .sheet-weapon-melee input[type="text"]:first-child {
   width: 40%; }
-
 .sheet-weapon-melee input,
 .sheet-weapon-melee .sheet-display-row {
   margin-right: 5px; }
@@ -1091,31 +1067,24 @@ input.sheet-skill-select {
   font-size: 1em;
   left: 92%;
   position: absolute; }
-
 .sheet-quality button[type="action"] {
   left: 98%; }
-
 .sheet-quality .sheet-settings input[type="text"] {
   margin-right: 2%;
   width: 82%; }
-
 .sheet-quality .sheet-settings select {
   width: 8%; }
-
 .sheet-quality .sheet-display-row:nth-of-type(1) {
   width: 80%; }
-
 .sheet-quality .sheet-display-row:nth-of-type(2) {
   width: 8%; }
 
 /***** MARTIAL ARTS *****/
 .sheet-martial h3:first-child {
   margin-right: 39%; }
-
 .sheet-martial input[type="text"],
 .sheet-martial .sheet-display-row {
   width: 54%; }
-
 .sheet-martial input[type="text"]:nth-of-type(2),
 .sheet-martial .sheet-display-row:nth-of-type(2) {
   text-align: left;
@@ -1483,20 +1452,15 @@ input.sheet-skill-select {
     width: 7%; }
   .sheet-form-box h3:nth-of-type(4) {
     width: 10%; }
-
 .sheet-form-box input[type="text"] {
   width: 50%; }
-
 .sheet-form-box input[type="number"] {
   width: 8%; }
-
 .sheet-form-box .sheet-settings div {
   width: 100%; }
-
 .sheet-form-box select {
   margin-right: 1%;
   width: 17%; }
-
 .sheet-form-box .sheet-display {
   display: inline-block; }
   .sheet-form-box .sheet-display .sheet-display-row {
@@ -1705,6 +1669,7 @@ input.sheet-skill-select {
   padding: 10px 10px;
   width: 720px;
   /*:+:+:+: NPC ATTRIBUTES :+:+:+:*/
+  /*:+:+:+: NPC BODY :+:+:+:*/
   /*:+:+:+: NPC BODY :+:+:+:*/ }
   .sheet-npc button {
     font-weight: bold; }
@@ -1726,10 +1691,12 @@ input.sheet-skill-select {
     font-size: 1em;
     text-transform: capitalize; }
   .sheet-npc h3 {
-    font-size: 0.8em;
-    font-variant: small-caps;
-    text-align: center;
-    text-decoration: underline; }
+    font-size: 0.85em; }
+  .sheet-npc input[type="text"]:placeholder-shown,
+  .sheet-npc input[type="input"]:placeholder-shown,
+  .sheet-npc textarea:placeholder-shown {
+    border: none;
+    background-color: #555; }
   .sheet-npc textarea, .sheet-npc select, .sheet-npc .sheet-matrix input {
     color: #fff;
     background-color: #555; }
@@ -1750,41 +1717,35 @@ input.sheet-skill-select {
       grid-column: 8 / 8; }
     .sheet-npc .sheet-tabs input[name='attr_stats_toggle'],
     .sheet-npc .sheet-tabs input[name='attr_stats_toggle'] + span.sheet-pictos,
-    .sheet-npc .sheet-tabs .sheet-pc-col input[type="checkbox"][name='attr_stats_toggle'] + span, .sheet-npc .sheet-tabs input[type="checkbox"][name='attr_stats_toggle'] + span,
+    .sheet-npc .sheet-tabs .sheet-pc-col input[type="checkbox"][name='attr_stats_toggle'] + span,
+    .sheet-npc .sheet-tabs input[type="checkbox"][name='attr_stats_toggle'] + span,
     .sheet-npc .sheet-tabs .sheet-flag-primary + div > input[name='attr_stats_toggle'] + span,
     .sheet-npc .sheet-tabs .sheet-settings-toggle input[type="checkbox"][name='attr_stats_toggle'] + span,
     .sheet-npc .sheet-tabs input[name='attr_stats_toggle'] + span.sheet-armor-buttons,
-    .sheet-npc .sheet-tabs
-    .sheet-armor-buttons input[name='attr_stats_toggle'] + span,
-    .sheet-armor-buttons
-    .sheet-npc .sheet-tabs input[name='attr_stats_toggle'] + span,
-    .sheet-npc .sheet-tabs input[name='attr_stats_toggle'] +
-    span.sheet-roll-toggles,
-    .sheet-npc .sheet-tabs
-    .sheet-roll-toggles input[name='attr_stats_toggle'] + span,
-    .sheet-roll-toggles
-    .sheet-npc .sheet-tabs input[name='attr_stats_toggle'] + span,
-    .sheet-npc .sheet-tabs .repcontrol input[name='attr_stats_toggle'] + span.repcontrol_edit:after, .repcontrol
-    .sheet-npc .sheet-tabs input[name='attr_stats_toggle'] + span.repcontrol_edit:after,
-    .sheet-npc .sheet-tabs
-    .repcontrol input[name='attr_stats_toggle'] + span.repcontrol_add:after,
-    .repcontrol
-    .sheet-npc .sheet-tabs input[name='attr_stats_toggle'] + span.repcontrol_add:after,
-    .sheet-npc .sheet-tabs .itemcontrol input[name='attr_stats_toggle'] + span.repcontrol_del, .itemcontrol
-    .sheet-npc .sheet-tabs input[name='attr_stats_toggle'] + span.repcontrol_del {
+    .sheet-npc .sheet-tabs .sheet-armor-buttons input[name='attr_stats_toggle'] + span,
+    .sheet-armor-buttons .sheet-npc .sheet-tabs input[name='attr_stats_toggle'] + span,
+    .sheet-npc .sheet-tabs input[name='attr_stats_toggle'] + span.sheet-roll-toggles,
+    .sheet-npc .sheet-tabs .sheet-roll-toggles input[name='attr_stats_toggle'] + span,
+    .sheet-roll-toggles .sheet-npc .sheet-tabs input[name='attr_stats_toggle'] + span,
+    .sheet-npc .sheet-tabs .repcontrol input[name='attr_stats_toggle'] + span.repcontrol_edit:after,
+    .repcontrol .sheet-npc .sheet-tabs input[name='attr_stats_toggle'] + span.repcontrol_edit:after,
+    .sheet-npc .sheet-tabs .repcontrol input[name='attr_stats_toggle'] + span.repcontrol_add:after,
+    .repcontrol .sheet-npc .sheet-tabs input[name='attr_stats_toggle'] + span.repcontrol_add:after,
+    .sheet-npc .sheet-tabs .itemcontrol input[name='attr_stats_toggle'] + span.repcontrol_del,
+    .itemcontrol .sheet-npc .sheet-tabs input[name='attr_stats_toggle'] + span.repcontrol_del {
       grid-area: 1 / 9 / 1 / 9;
       position: relative;
       width: 100%;
       height: 100%; }
     .sheet-npc .sheet-tabs input[name='attr_stats_toggle']:checked + span {
       color: #FCD116; }
-    .sheet-npc .sheet-tabs span.sheet-pictos, .sheet-npc .sheet-tabs .sheet-pc-col input[type="checkbox"] + span, .sheet-npc .sheet-tabs input[type="checkbox"] + span, .sheet-npc .sheet-tabs .sheet-flag-primary + div > span, .sheet-npc .sheet-tabs .sheet-settings-toggle input[type="checkbox"] + span, .sheet-npc .sheet-tabs span.sheet-armor-buttons, .sheet-npc .sheet-tabs
-    .sheet-armor-buttons span,
-    .sheet-armor-buttons .sheet-npc .sheet-tabs span, .sheet-npc .sheet-tabs
-    span.sheet-roll-toggles, .sheet-npc .sheet-tabs
-    .sheet-roll-toggles span,
-    .sheet-roll-toggles .sheet-npc .sheet-tabs span, .sheet-npc .sheet-tabs .repcontrol span.repcontrol_edit:after, .repcontrol .sheet-npc .sheet-tabs span.repcontrol_edit:after, .sheet-npc .sheet-tabs
-    .repcontrol span.repcontrol_add:after,
+    .sheet-npc .sheet-tabs span.sheet-pictos, .sheet-npc .sheet-tabs .sheet-pc-col input[type="checkbox"] + span, .sheet-npc .sheet-tabs input[type="checkbox"] + span, .sheet-npc .sheet-tabs .sheet-flag-primary + div > span, .sheet-npc .sheet-tabs .sheet-settings-toggle input[type="checkbox"] + span, .sheet-npc .sheet-tabs span.sheet-armor-buttons,
+    .sheet-npc .sheet-tabs .sheet-armor-buttons span,
+    .sheet-armor-buttons .sheet-npc .sheet-tabs span,
+    .sheet-npc .sheet-tabs span.sheet-roll-toggles,
+    .sheet-npc .sheet-tabs .sheet-roll-toggles span,
+    .sheet-roll-toggles .sheet-npc .sheet-tabs span, .sheet-npc .sheet-tabs .repcontrol span.repcontrol_edit:after, .repcontrol .sheet-npc .sheet-tabs span.repcontrol_edit:after,
+    .sheet-npc .sheet-tabs .repcontrol span.repcontrol_add:after,
     .repcontrol .sheet-npc .sheet-tabs span.repcontrol_add:after, .sheet-npc .sheet-tabs .itemcontrol span.repcontrol_del, .itemcontrol .sheet-npc .sheet-tabs span.repcontrol_del {
       text-align: center;
       font-size: 1.2em; }
@@ -1826,7 +1787,7 @@ input.sheet-skill-select {
     .sheet-npc .sheet-body .sheet-row {
       width: 100%; }
       .sheet-npc .sheet-body .sheet-row button {
-        font-size: 1.2em;
+        font-size: 1.1em;
         margin-right: 3%;
         text-align: left; }
       .sheet-npc .sheet-body .sheet-row h2 {
@@ -1835,8 +1796,17 @@ input.sheet-skill-select {
         line-height: unset;
         margin-right: 3%;
         font-weight: normal; }
+      .sheet-npc .sheet-body .sheet-row h3 {
+        display: inline; }
       .sheet-npc .sheet-body .sheet-row span.sheet-tiny-span {
         margin: 0px 1%; }
+    .sheet-npc .sheet-body span[name='attr_physical_limit']:after,
+    .sheet-npc .sheet-body span[name='attr_mental_limit']:after {
+      content: ','; }
+  .sheet-npc .sheet-repeating h3 {
+    font-variant: small-caps;
+    text-align: center;
+    text-decoration: underline; }
 
 /*:+:+:+: NPC TOGGLES & GEAR ICONS :+:+:+:*/
 input.sheet-settings-toggle {
