--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -1904,18 +1904,20 @@
 
 	h1, h2, h3, h4, input, label { color: #fff; }
 
-	h1 {font-size: 1.25em;}
+	h1 { font-size: 1.25em; }
 
 	h2 { 
 		font-size: 1em;
 		text-transform: capitalize;
 	}
 
-	h3 { 
-		font-size: 0.8em;
-		font-variant: small-caps;
-		text-align  : center;
-		text-decoration: underline; 
+	h3 { font-size: 0.85em; }
+
+	input[type="text"]:placeholder-shown, 
+	input[type="input"]:placeholder-shown, 
+	textarea:placeholder-shown {
+		border: none;
+		background-color: #555;
 	}
 
 	textarea, select, .sheet-matrix input {
@@ -2012,7 +2014,7 @@
 			width: 100%;
 
 			button {
-				font-size: 1.2em;
+				font-size: 1.1em;
 				margin-right: 3%;
 				text-align: left;
 			}
@@ -2025,9 +2027,27 @@
 				font-weight: normal;
 			}
 
+			h3 {
+				display: inline;
+			}
+
 			span.sheet-tiny-span {
 				margin: 0px 1%;
 			}
+		}
+
+		span[name='attr_physical_limit']:after,
+		span[name='attr_mental_limit']:after {
+			content: ',';
+		}
+	}
+
+	/*:+:+:+: NPC BODY :+:+:+:*/
+	.sheet-repeating {
+		h3 { 
+			font-variant: small-caps;
+			text-align  : center;
+			text-decoration: underline; 
 		}
 	}
 }
