--- a/Shadowrun5thEdition/src/pug/_mixins.pug
+++ b/Shadowrun5thEdition/src/pug/_mixins.pug
@@ -57,3 +57,16 @@ mixin hostSprite(object, attrName)
 //- INITITAITVE ROLL
 mixin initiativeRoll(name, attribute, translation)
     button(data-i18n=translation name=name type='roll' value!=rollBeginging+'{{header=^{'+translation+'}}}{{base=^{base}}}{{dice=[[((@{'+attribute+'_mod})+@{wound_toggle}+@{modifier_toggle})+(@{'+attribute+'_dice})d6cf0 &{tracker}]]}}') #{name}
+
+//- NPC CONDITION MONITOR
+mixin conditionMonitor(conditionTypes)
+    each val in conditionTypes
+        label.settings(data-i18n-title=val+'bonus' title=val+'bonus')
+            input(name='attr_'+val+'_modifier' placeholder='0' title='@{'+val+'_modifier}' type='number' value='0')
+        if val === 'physical'
+            span.settings /
+    span.settings.tiny-span() =
+    each val in conditionTypes
+        span(name='attr_'+val title='@{'+val+'_modifier}')
+        if val === 'physical'
+            span /
