--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -234,25 +234,50 @@ include src/pug/_mixins.pug
 				each val in ['Physical', 'Mental', 'Social']
 					- const attrName = val.toLowerCase();
 					h3(data-i18n=attrName) val
-					label(data-i18n-title='modifier' title='modifier')
+					label.settings(data-i18n-title='modifier' title='modifier')
 						input(name='attr_'+attrName+'_limit_modifier' placeholder='0' title='@{'+attrName+'_limit_modifier}' type='number' value='0')
 					span.settings.tiny-span() =
 					span(name='attr_'+attrName+'_limit' title='@{'+attrName+'_limit}')
 			.row.grunt
-				h2(data-i18n='paintolerance') Pain Tolerance
-				label(data-i18n-title='paintolerance' title='paintolerance')
+				h2.settings(data-i18n='paintolerance') Pain Tolerance
+				label.settings(data-i18n-title='paintolerance' title='paintolerance')
 					input(name='attr_pain_tolerance' min='-1' max='3' placeholder='0' title='@{pain_tolerance}' type='number' value='0')
 			.row.vehicle
 				h2(data-i18n='conditionmonitorpm') Condition Monitor (P/M)
 				+conditionMonitor(['physical', 'matrix'])
 			.row.vehicle
 				each val, key in {'Data Processing': ['data_processing', 'data_processing'], 'Firewall': ['firewall', 'firewall'], 'Device Rating': ['device_rating', 'devicerating']}
+					.row
+						h2(data-i18n=val[1]) key
+						label.settings(data-i18n-title=val[1] title=val[1]) 
+							input(name='attr_'+val[0] min='0' placeholder='0' title='@{'+val[0]+'}' type='number' value='')
+						span.settings.tiny-span() =
+						span(name='attr_'+val[0])
+		.column.grunt.vehicle
+			.row
+				h2(data-i18n='armorrating') Armor Rating
+				label.settings(data-i18n-title='armorrating' title='armorrating')
+					input(,ame='attr_armor_rating' placeholder='9' title='@{armor_rating}' type='number' value='0')
+			each val, key in {'Defense Modifier': ['defense', 'Defense Modifier'], 'Soak Modifier': ['soak', 'Soak Modifier'], 'Acid Protection': ['acid', 'acidprotection'], 'Cold Protection': ['cold', 'coldprotection'], 'Electrical Protection': ['electrical', 'electricalprotection'], 'Fire Protection': ['fire', 'fireprotection'], 'Radiation Protection': ['radiation', 'radiationprotection']}
+				.row
 					h2(data-i18n=val[1]) key
-					label(data-i18n-title=val[1] title=val[1]) 
-						input(name='attr_'+val[0] min='0' placeholder='0' title='@{'+val[0]+'}' type='number' value='')
-		.column
+					label.settings(data-i18n-title=val[1] title=val[1])
+						input(name='attr_'+val[0]+'_modifier' placeholder='0' title='@{'+val[0]+'_modifier}' type='number' value='0')
 
 		.column
+			each val, key in {'Mundane': ['mundane', 'mundane'], 'Awakened': ['awakened', 'magic'], 'Emerged': ['emerged', 'resonance']}
+				.row
+					h2(data-i18n=val[0]) key
+					label.settings(data-i18n-title=val[0] title=val[0])
+						input.character-type(name='attr_flag_special' checked='checked' title='@{flag_special}' type='checkbox' value=val[1])
+			.row
+				h2(data-i18n=matrixdevice) Matrix Device
+				label.settings(data-i18n-title=matrixdevice title='Matrix Device')
+					input.character-type(name='attr_flag_matrix' title='@{flag_matrix}' type='checkbox' value='matrix')
+			.row.vehicle
+				label.settings(data-i18n-title=drone title='Drone')
+					input.character-type(name='attr_flag_drone' title='@{flag_drone}' type='checkbox' value='drone')
+
 
 //- FOOTER
 include src/footer.html
