--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -1,60 +1,19 @@
 @font-face {
     font-family: Charm;
-    src: url(https://fonts.googleapis.com/css?family=Charm);
+    src: url(url(https://fonts.gstatic.com/s/charm/v4/7cHmv4oii5K0MdYoK-4.woff2), url(https://fonts.gstatic.com/s/tinos/v13/buE4poGnedXvwjX7fmQ.woff2), ;
   }
   
   * {
-      font-family: 'Charm', 'Apple Chancery', 'Palatino Linotype', cursive;
+      font-family: 'Charm', 'Apple Chancery', 'Palatino Linotype', Helvetica, Arial, sans-serif;
   }
   
-  .sheet-flex {
-      display: inline-flex;
-      justify-content: space-evenly;
+  * , *:before, *:after{ 
+       box-sizing:border-box; 
+       -moz-box-sizing:border-box; 
+       -webkit-box-sizing:border-box; 
+       -ms-box-sizing:border-box;
   }
-  
-  .sheet-flex-column {
-      display: flex;
-      flex-direction: column;
-  }
-  
-  .sheet-logo {
-      max-width: 40%;
-      height: auto;
-  }
-  
-  .sheet-attr-label {
-      background: #598084;
-      color: white;
-      font-family: 'Apple Chancery', Helvetica;
-      font-weight: bold;
-  }
-  
-  
-  .sheet-round-box {
-      border: 2px solid gray;
-      border-radius: 9px;
-      padding: 9px;
-  }
-  
-  /*Start of NPC checkbox functionality*/
-  .sheet-block-switch,
-  .sheet-npc-switch-label {
-      float: right;
-      overflow: auto;
-      margin 0px;
-      padding 0px
-  }
-  
-  .sheet-block-a,
-  .sheet-block-switch:checked ~ .sheet-block-b {
-      display: block;
-  }
-  
-  .sheet-block-b,
-  .sheet-block-switch:checked ~ .sheet-block-a {
-      display: none;
-  }
-  /*End of NPC checkbox functionality*/
+    
   
   textarea {
       border-radius: 6px;
@@ -63,7 +22,7 @@
   }
   
   input[type=number], input[type=text], select {
-      border-radius: 4px;
+      border-radius: 6px;
       line-height: 20px;
       height: 30px;
       max-width: 200px;
@@ -85,6 +44,38 @@
   hr {
       margin: 12px;
   }
+   
+  .sheet-flex {
+      display: flex;
+      justify-content: space-around;
+  }
+  
+  .sheet-flex-column {
+      display: flex;
+      flex-direction: column;
+  }
+  
+  .sheet-logo {
+      width: auto;
+      height: 120px;
+      margin-top: 10px;
+  }
+  
+  .sheet-partyOptions {
+      display: flex;
+      justify-content: flex-start;
+      margin: 9px;
+  }
+  
+  .sheet-personalItems {
+      justify-content: flex-start;
+  }
+  
+  .sheet-round-box {
+      border: 2px solid gray;
+      border-radius: 9px;
+      padding: 9px;
+  }   
   
   .sheet-charoptions {
       width: 100px;
@@ -161,8 +152,14 @@
   }
   
   .sheet-attrLabel {
-      position: relative;
-      top: 10px;
+      background: #aaeeaa;
+      color: black;
+      font-size: 1.1em;
+      font-weight: bold;
+      margin: 6px 0 3px 0;
+      width: 98%;
+      padding-left: 6px;
+      border-radius: 3px;
   }
   
   .sheet-healthLabel, .sheet-infoLabel {
@@ -297,13 +294,14 @@
   }
   
   .sheet-headerLabel {
-      background: #aaa57c;
-      color: white;
-      font-family: 'Apple Chancery', Helvetica;
+      background: #aaeeaa;
+      color: black;
       font-weight: bold;
-      border-radius: 3px;
-      padding: 3px;
-      font-size: 1em;
+      border-radius: 4px;
+      padding-left: 5px;
+      width: 240px;
+      font-size: 15px;
+      height: 20px;
   }
   
   .sheet-headerLabel-eq {
@@ -333,20 +331,22 @@
       display: inline;
   }
   
-  /* Weapon Mastery */
+  /* Weapon Mastery 
+     ============================= */
   input.sheet-radioChoice {
       width: 130px;
       cursor: pointer;
       position: relative;
       opacity: 0;
       z-index: 9999;
+      height: 18px;
   }
   
   span.sheet-radioChoice {
       text-align: center;
       display: inline-block;
-      background: #a86e53;
-      color: white;
+      background: #00cdcd;
+      color: black;
       border-radius: 4px;
       width: 130px;
       cursor: pointer;
@@ -362,13 +362,18 @@
   input.sheet-radioChoice4:checked + span.sheet-radioChoice4,
   input.sheet-radioChoice5:checked + span.sheet-radioChoice5,
   inpur.sheet-radioChoice6:checked + span.sheet-radioChoice6 {
-      background: #88394d;
+      background: #229999;
       border-radius: 4px;
       border: transparent;
       color: white;
   }
   
-  /* High Level Tabs */
+  .sheet-weaponBar {
+      padding-left: 10px;
+  }
+  
+  /* High Level Tabs
+     ============================= */
   input.sheet-tab {
       width: 150px;
       height: 40px;
@@ -425,8 +430,8 @@
       padding: 5px;
   }
   
-  
-  /* Roll Templates */
+  /* Roll Templates
+     ============================= */
   .sheet-rolltemplate-skillCheck .sheet-rollTitle,
   .sheet-rolltemplate-accuracyCheck .sheet-rollTitle,
   .sheet-rolltemplate-oneDieCheck .sheet-rollTitle {
@@ -443,7 +448,6 @@
       font-family: 'Charm', 'Palatino Linotype', 'Apple Chancery', cursive;
   }
   
-  /* Colors for the rolltemplate title */
   .sheet-rolltemplate-skillCheck .sheet-rollTitle,
   .sheet-rolltemplate-oneDieCheck .sheet-rollTitle,
   .sheet-rolltemplate-accuracyCheck .sheet-rollTitle {background-color:#aaa57c;}
@@ -507,8 +511,8 @@
       margin-left: 5px;
   }
   
-  /*Styling that removes the box around roll buttons*/
-  
+  /* Styling that removes the box around roll buttons
+     ============================= */
   button[type=roll].sheet-skill-check-button::before { content: ''; }
   
   button[type=roll].sheet-skill-check-button:hover {
@@ -527,14 +531,34 @@
       margin: 0px;
   }
   
-  /* NPC Sheet styling*/
+  /* NPC checkbox functionality
+     ============================= */
+  .sheet-block-switch,
+  .sheet-npc-switch-label {
+      float: right;
+      overflow: auto;
+      margin 0px;
+      padding 0px
+  }
   
+  .sheet-block-a,
+  .sheet-block-switch:checked ~ .sheet-block-b {
+      display: block;
+  }
+  
+  .sheet-block-b,
+  .sheet-block-switch:checked ~ .sheet-block-a {
+      display: none;
+  }
+  
+  
+  /* NPC Sheet styling
+     ============================= */
   .sheet-npc-sheet-container * {
       font-family: Helvetica, sans-serif;
       font-weight: bold;
       font-size: 12px;
       background-color: #ffffff;
-      /*border: solid black 1px;*/
   }
   
   .sheet-npc-sheet-container table {
@@ -639,6 +663,4 @@
       position: absolute;
       right: 0px;
   }
-  
-  
   
