--- a/Stars_Without_Number_Revised/Source/pug/character.pug
+++ b/Stars_Without_Number_Revised/Source/pug/character.pug
@@ -100,7 +100,7 @@ input(type="hidden", name="attr_magic_type", value="arcanist").magic-type
 //- Core
 .core.core-info.cols-2
 	.info.flex.core-box-text
-		+text-input("name", "NAME").important
+		+text-input("character_name", "NAME").important
 		+text-input("level", "LEVEL", "no-spinners")(type="number", min="1", value="1").level.center
 		+text-input("class", "CLASS").level-rest
 		+text-input("background", "BACKGROUND").col25
