--- a/Stars_Without_Number_Revised/Source/pug/npc.pug
+++ b/Stars_Without_Number_Revised/Source/pug/npc.pug
@@ -63,7 +63,7 @@ input(type="hidden", name="attr_setting_individual_hidden", value="1").input-ind
 
 //- HP and AC
 .core-box-text.npc-hp
-	+text-input-duo("HP", "HP_MAX", "HIT_POINTS").cols-2.important
+	+text-input-duo("HP", "HP_max", "HIT_POINTS").cols-2.important
 	+text-input("AC", "AC")(type="number", value="10").center
 	+fake-text-input("TYPE").center
 		select(name="attr_npc_armor_type")
