--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -229,11 +229,9 @@ include src/pug/_mixins.pug
 				button(data-i18n='conditionmonitorps' name='act_cond_reset' type='action') Condition Monitor (P/S)
 				+conditionMonitor(['physical', 'stun'])
 			.row.grunt
-				h2(data-i18n='limits') Limits
-				br
 				each val in ['Physical', 'Mental', 'Social']
 					- const attrName = val.toLowerCase();
-					h3(data-i18n=attrName) val
+					h2(data-i18n=attrName) val
 					label.settings(data-i18n-title='modifier' title='modifier')
 						input(name='attr_'+attrName+'_limit_modifier' placeholder='0' title='@{'+attrName+'_limit_modifier}' type='number' value='0')
 					span.settings.tiny-span() =
@@ -263,21 +261,26 @@ include src/pug/_mixins.pug
 					h2(data-i18n=val[1]) key
 					label.settings(data-i18n-title=val[1] title=val[1])
 						input(name='attr_'+val[0]+'_modifier' placeholder='0' title='@{'+val[0]+'_modifier}' type='number' value='0')
+					span.settings.tiny-span() =
+					if (key === 'Defense Modifier' || key === 'Soak Modifier')
+						span(name='attr_'+val[0])
+					else
+						span(name='attr_'+val[0]+'_protection')
 
 		.column
-			each val, key in {'Mundane': ['mundane', 'mundane'], 'Awakened': ['awakened', 'magic'], 'Emerged': ['emerged', 'resonance']}
-				.row
-					h2(data-i18n=val[0]) key
+			.row
+				each val, key in {'Mundane': ['mundane', 'mundane'], 'Awakened': ['awakened', 'magic'], 'Emerged': ['emerged', 'resonance']}
 					label.settings(data-i18n-title=val[0] title=val[0])
 						input.character-type(name='attr_flag_special' checked='checked' title='@{flag_special}' type='checkbox' value=val[1])
-			.row
-				h2(data-i18n=matrixdevice) Matrix Device
+						h2(data-i18n=val[0]) key
+				hr
 				label.settings(data-i18n-title=matrixdevice title='Matrix Device')
 					input.character-type(name='attr_flag_matrix' title='@{flag_matrix}' type='checkbox' value='matrix')
-			.row.vehicle
+					h2(data-i18n=matrixdevice) Matrix Device
+				hr
 				label.settings(data-i18n-title=drone title='Drone')
 					input.character-type(name='attr_flag_drone' title='@{flag_drone}' type='checkbox' value='drone')
-
+					h2(data-i18n=drone) Drone
 
 //- FOOTER
 include src/footer.html
