--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -52,7 +52,7 @@ include src/pug/_mixins.pug
 				h1(data-i18n='skills') Skills
 			.border-box.skill-box
 				.pc-box.medium-box
-					.row-long
+					.rows-long
 						each val in ['Skill', 'RTG', 'Attribute', 'Limit']
 							- const translationKey = val.toLowerCase();
 							h3(data-i18n=translationKey) #{val}
@@ -62,7 +62,7 @@ include src/pug/_mixins.pug
 						- const limitDefault = val === 'active' ? 'Physical' : val === 'knowledge' ? 'Mental' : 'Social';
 						div(class='skills-'+key)
 							if val === 'active'
-								.row-long
+								.rows-long
 									input(name='attr_default_display' type='hidden' value='Agility')
 									+rollButton('default', '@{default_display}', '@{default_attribute}+-1')
 									span.text-align-center -
@@ -77,7 +77,7 @@ include src/pug/_mixins.pug
 								input(name='attr_display_limit' type='hidden' value='Physical')
 								input(name='attr_display_attribute' type='hidden')
 								input(name='attr_dicepool' type='hidden' value='0')
-								.row-long.border-bottom
+								.rows-long.border-bottom
 									.buttons
 										//- SKILL BUTTOn
 										+skillButton(false)
@@ -89,7 +89,7 @@ include src/pug/_mixins.pug
 									select.limit-select(name='attr_limit' title='Skill limit' value='physical_limit')
 										+limitSelect(limitDefault)
 									button.pictos(name='act_skill' type='action') x
-								.settings-grid.row-long
+								.settings-grid.rows-long
 									if val === 'active'
 										select.skill-select(name='attr_skill' title='Active skill' value='Close Combat Group')
 											include src/skillselect.html
@@ -156,7 +156,6 @@ include src/pug/_mixins.pug
 		span.pictos y
 	input(name='attr_stats_toggle' type='hidden' value='settings')
 	.grunt.attribute
-		input.character-type(name='attr_flag_special' type='hidden')
 		each val in coreAttributeArray
 			- const attrName = val.toLowerCase();
 			+npcAttributeButton(attrName, '@{'+attrName+'}+@{attribute_roll}')
@@ -172,9 +171,9 @@ include src/pug/_mixins.pug
 			input(name='attr_essence' placeholder='6' title='@{essence}' type='number' value='6')
 		each val, key in {'magic': 'magic', 'force': 'magic', 'resonance': 'resonance'}
 			- const abbreviation = key.slice(0,1);
-			h1.settings(class=val data-i18n=abbreviation) #{abbreviation}
-			span.settings(class=val name='attr_'+key)
-			label.settings(class=val data-i18n-title=key title=key)
+			h1(class='hide-'+val data-i18n=abbreviation) #{abbreviation}
+			span(class='hide-'+val name='attr_'+key)
+			label.settings(class='hide-'+val data-i18n-title=key title=key)
 				input(name='attr_'+key placeholder='6' title='@{'+key+'}' type='number' value='6')
 	.host.attribute
 		+hostSprite(hostObject, 'host_rating')
@@ -192,14 +191,14 @@ include src/pug/_mixins.pug
 	.body
 		.column
 			h1.settings(data-i18n='bonuses') Bonuses
-			.row
+			.rows
 				h2(data-i18n='pr') Professional Rating
 				span(name='attr_pr')
 				label.settings(data-i18n-title='pr' title='Professional Rating')
 					input(name='attr_pr' title='@{pr}' type='number')
 			each val, key in {'Initiative': ['initiative', 'initiative'], 'Astral Initiative': ['astral', 'astralinitiative'], 'Matrix Initiative': ['matrix', 'matrixinitiative']}
 				- const npcCharacterType = key === 'Initiative' ? 'grunt' : key === 'Astral Initiative' ? 'grunt magic' : 'grunt sprite';
-				.row(class=npcCharacterType)
+				.rows(class=npcCharacterType)
 					+initiativeRoll(key, val[0], val[1])
 					label.settings(data-i18n-title='modifier' title='modifier')
 						input(name='attr_'+val[0]+'_modifier' placeholder='0' title='@{'+val[0]+'_modifier}' type='number' value='0')
@@ -212,7 +211,7 @@ include src/pug/_mixins.pug
 					span.tiny-span() +
 					span(name='attr_'+val[0]+'_dice')
 					span.tiny-span(data-i18n='d6') d6
-			.row.grunt
+			.rows.grunt
 				h2(data-i18n='movement') Movement
 				- const movementObject = {'walk': ' / ', 'run': ' / + ', 'movement_mod': ''}
 				each val, key in movementObject
@@ -225,10 +224,10 @@ include src/pug/_mixins.pug
 				each val, key in movementObject
 					span(name='attr_'+key title='@{'+key+'}')
 					span #{val}
-			.row.grunt
+			.rows.grunt
 				button(data-i18n='conditionmonitorps' name='act_cond_reset' type='action') Condition Monitor (P/S)
 				+conditionMonitor(['physical', 'stun'])
-			.row.grunt
+			.rows.grunt
 				each val in ['Physical', 'Mental', 'Social']
 					- const attrName = val.toLowerCase();
 					h2(data-i18n=attrName) val
@@ -236,48 +235,50 @@ include src/pug/_mixins.pug
 						input(name='attr_'+attrName+'_limit_modifier' placeholder='0' title='@{'+attrName+'_limit_modifier}' type='number' value='0')
 					span.settings.tiny-span() =
 					span(name='attr_'+attrName+'_limit' title='@{'+attrName+'_limit}')
-			.row.grunt
+			.rows.grunt
 				h2.settings(data-i18n='paintolerance') Pain Tolerance
 				label.settings(data-i18n-title='paintolerance' title='paintolerance')
 					input(name='attr_pain_tolerance' min='-1' max='3' placeholder='0' title='@{pain_tolerance}' type='number' value='0')
-			.row.vehicle
+			.rows.vehicle
 				h2(data-i18n='conditionmonitorpm') Condition Monitor (P/M)
 				+conditionMonitor(['physical', 'matrix'])
-			.row.vehicle
+			.rows.vehicle
 				each val, key in {'Data Processing': ['data_processing', 'data_processing'], 'Firewall': ['firewall', 'firewall'], 'Device Rating': ['device_rating', 'devicerating']}
-					.row
+					.rows
 						h2(data-i18n=val[1]) key
 						label.settings(data-i18n-title=val[1] title=val[1]) 
 							input(name='attr_'+val[0] min='0' placeholder='0' title='@{'+val[0]+'}' type='number' value='')
 						span.settings.tiny-span() =
 						span(name='attr_'+val[0])
 		.column.grunt.vehicle
-			.row
-				h2(data-i18n='armorrating') Armor Rating
+			h1.settings(data-i18n='modifier') Modifier
+			.rows
+				+rollButton('armorrating', 'base', '@{soak}')
 				label.settings(data-i18n-title='armorrating' title='armorrating')
 					input(,ame='attr_armor_rating' placeholder='9' title='@{armor_rating}' type='number' value='0')
-			each val, key in {'Defense Modifier': ['defense', 'Defense Modifier'], 'Soak Modifier': ['soak', 'Soak Modifier'], 'Acid Protection': ['acid', 'acidprotection'], 'Cold Protection': ['cold', 'coldprotection'], 'Electrical Protection': ['electrical', 'electricalprotection'], 'Fire Protection': ['fire', 'fireprotection'], 'Radiation Protection': ['radiation', 'radiationprotection']}
-				.row
-					h2(data-i18n=val[1]) key
+			each val, key in {'Defense': ['defense', 'defense'], 'Soak': ['soak', 'soak'], 'Acid Protection': ['acid', 'acidprotection'], 'Cold Protection': ['cold', 'coldprotection'], 'Electrical Protection': ['electrical', 'electricalprotection'], 'Fire Protection': ['fire', 'fireprotection'], 'Radiation Protection': ['radiation', 'radiationprotection']}
+				.rows
+					+rollButton(val[1], 'base', '@{soak}+@{'+val[0]+'_modifier}')
 					label.settings(data-i18n-title=val[1] title=val[1])
 						input(name='attr_'+val[0]+'_modifier' placeholder='0' title='@{'+val[0]+'_modifier}' type='number' value='0')
 					span.settings.tiny-span() =
-					if (key === 'Defense Modifier' || key === 'Soak Modifier')
+					if (key === 'Defense' || key === 'Soak')
 						span(name='attr_'+val[0])
 					else
 						span(name='attr_'+val[0]+'_protection')
 
 		.column
-			.row
+			.rows
+				h1.settings(data-i18n='options') Options
+			.rows
 				each val, key in {'Mundane': ['mundane', 'mundane'], 'Awakened': ['awakened', 'magic'], 'Emerged': ['emerged', 'resonance']}
 					label.settings(data-i18n-title=val[0] title=val[0])
-						input.character-type(name='attr_flag_special' checked='checked' title='@{flag_special}' type='checkbox' value=val[1])
+						input.character-type(name='attr_flag_special' title='@{flag_special}' type='radio' value=val[1])
 						h2(data-i18n=val[0]) key
-				hr
+			.rows
 				label.settings(data-i18n-title=matrixdevice title='Matrix Device')
 					input.character-type(name='attr_flag_matrix' title='@{flag_matrix}' type='checkbox' value='matrix')
 					h2(data-i18n=matrixdevice) Matrix Device
-				hr
 				label.settings(data-i18n-title=drone title='Drone')
 					input.character-type(name='attr_flag_drone' title='@{flag_drone}' type='checkbox' value='drone')
 					h2(data-i18n=drone) Drone
